docs/api/qiskit/0.40/qiskit.transpiler.passes.Optimize1qGatesDecomposition.mdx
---
title: Optimize1qGatesDecomposition (v0.40)
description: API reference for qiskit.transpiler.passes.Optimize1qGatesDecomposition in qiskit v0.40
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Optimize1qGatesDecomposition
---

# Optimize1qGatesDecomposition

<Class id="qiskit.transpiler.passes.Optimize1qGatesDecomposition" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/transpiler/passes/optimization/optimize_1q_decomposition.py" signature="Optimize1qGatesDecomposition(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Optimize chains of single-qubit gates by combining them into a single gate.

  **The decision to replace the original chain with a new resynthesis depends on:**

  *   whether the original chain was out of basis: replace
  *   whether the original chain was in basis but resynthesis is lower error: replace
  *   whether the original chain contains a pulse gate: do not replace
  *   whether the original chain amounts to identity: replace with null

  Error is computed as a multiplication of the errors of individual gates on that qubit.

  Optimize1qGatesDecomposition initializer.

  **Parameters**

  *   **basis** (*list\[str]*) – Basis gates to consider, e.g. \[‘u3’, ‘cx’]. For the effects of this pass, the basis is the set intersection between the basis parameter and the Euler basis. Ignored if `target` is also specified.
  *   **target** (*Optional\[*[*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")*]*) – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object corresponding to the compilation target. When specified, any argument specified for `basis_gates` is ignored.

  ## Methods

  <span id="qiskit-transpiler-passes-optimize1qgatesdecomposition-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.name" signature="Optimize1qGatesDecomposition.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-optimize1qgatesdecomposition-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.run" signature="Optimize1qGatesDecomposition.run(dag)">
    Run the Optimize1qGatesDecomposition pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Optimize1qGatesDecomposition.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

